# rest-extention

./: CHANGELOG.md  README.md  example.http  package-lock.json  package.json
rezt/: Cargo.toml  README.md  index.node  package-lock.json  package.json  script.js
rezt/src/: lib.rs
src/: extension.ts
